fixed bug on firefox

--- a/frontend/src/components/NavBar/NavBar.module.css
+++ b/frontend/src/components/NavBar/NavBar.module.css
@@ -7,6 +7,7 @@
 
 .nav-bar svg {
   color: var(--primary-accent);
+  width: clamp(20px, 30vw, 45px);
 }
 
 @media screen and (max-width: 400px) {
